# numb-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: matrix_benchmark.rs
src/: core.rs  dense.rs  dev_macros.rs  fixed.rs  fraction.rs  lib.rs  macros.rs  matrix.rs  numerics.rs  patterns.rs  solver.rs  symmetric.rs  utilities.rs
tests/: integration_tests.rs
