[package]
name = "numb_rs"
version = "0.0.3"
authors = ["MrGibus <arcane2.0@gmail.com>"]
edition = "2018"
repository = "https://github.com/MrGibus/numb_rs"
readme = "README.MD"
description = "An experimental numeric package written entirely in rust"
license = "MIT OR Apache-2.0"

#[workspace]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "matrix_benchmark"
harness = false
